tenace (0.18-1) unstable; urgency=medium

  * Fix board_window_init prototype. (Closes: #1097982)
  * Remove quotes from mailcap file. (Closes: #987416)

 -- Christoph Berg <myon@debian.org>  Sun, 07 Sep 2025 17:06:43 +0000

tenace (0.17-1) unstable; urgency=medium

  [ Debian Janitor ]
  * Wrap long lines in changelog entries: 0.16-2.
  * Bump debhelper from old 11 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Update standards version to 4.5.0, no changes needed.

  [ Christoph Berg ]
  * Update package URLs.

 -- Christoph Berg <myon@debian.org>  Tue, 31 Aug 2021 17:00:32 +0200

tenace (0.16-2) unstable; urgency=medium

  [ Helmut Grohne ]
  * Fix FTCBFS: Let dh_auto_configure pass --host to ./configure.
    (Closes: #923147)

  [ Christoph Berg ]
  * Simplify debian/rules. (Don't run dh_autoreconf, doesn't work yet.)

 -- Christoph Berg <myon@debian.org>  Mon, 25 Feb 2019 11:18:48 +0100

tenace (0.16-1) unstable; urgency=medium

  * New upstream version.
    + Update to dds 2.9.0, remove our dds copy, remove gnulib physmem module.
    + Fix handling of board numbers in menu callback. Closes: #879455.

 -- Christoph Berg <myon@debian.org>  Sun, 23 Sep 2018 15:04:05 +0200

tenace (0.15-1) unstable; urgency=medium

  * New upstream version.
    + Adapt glib-genmarshal call to new syntax. Closes: #871082.

 -- Christoph Berg <myon@debian.org>  Mon, 21 Aug 2017 20:04:07 +0200

tenace (0.14-1) unstable; urgency=medium

  * New upstream version.
    + Font handling improved. Closes: #515572.
    + Support lin files starting with qx||. Closes: #680912.
  * Install desktop file and icon. Closes: #738041.

 -- Christoph Berg <myon@debian.org>  Sun, 12 Jun 2016 15:39:54 +0200

tenace (0.13-1) unstable; urgency=low

  * New upstream version.
    + Links with -lm. Closes: #704794.
    + Set dealer and vulnerability correctly on new boards. Closes: #668003.
  * Drop Suggests: gnome-games-extra-data, doesn't exist anymore. Thanks to